Package_Tools/include_C/sdl3/include/SDL3/in_arbeit/SDL_audio.h


#define SDL_AUDIO_MASK_BITSIZE       (0xFFu)
#define SDL_AUDIO_MASK_FLOAT         (1u<<8)
#define SDL_AUDIO_MASK_BIG_ENDIAN    (1u<<12)
#define SDL_AUDIO_MASK_SIGNED        (1u<<15)
typedef enum SDL_AudioFormat
{
    SDL_AUDIO_UNKNOWN   = 0x0000u,  
    SDL_AUDIO_U8        = 0x0008u,  
    SDL_AUDIO_S8        = 0x8008u,  
    SDL_AUDIO_S16LE     = 0x8010u,  
    SDL_AUDIO_S16BE     = 0x9010u,  
    SDL_AUDIO_S32LE     = 0x8020u,  
    SDL_AUDIO_S32BE     = 0x9020u,  
    SDL_AUDIO_F32LE     = 0x8120u,  
    SDL_AUDIO_F32BE     = 0x9120u,  
    #if SDL_BYTEORDER == SDL_LIL_ENDIAN
    SDL_AUDIO_S16 = SDL_AUDIO_S16LE,
    SDL_AUDIO_S32 = SDL_AUDIO_S32LE,
    SDL_AUDIO_F32 = SDL_AUDIO_F32LE,
    #else
    SDL_AUDIO_S16 = SDL_AUDIO_S16BE,
    SDL_AUDIO_S32 = SDL_AUDIO_S32BE,
    SDL_AUDIO_F32 = SDL_AUDIO_F32BE
    #endif
} SDL_AudioFormat;
#define SDL_AUDIO_BITSIZE(x)         ((x) & SDL_AUDIO_MASK_BITSIZE)
#define SDL_AUDIO_BYTESIZE(x)        (SDL_AUDIO_BITSIZE(x) / 8)
#define SDL_AUDIO_ISFLOAT(x)         ((x) & SDL_AUDIO_MASK_FLOAT)
#define SDL_AUDIO_ISBIGENDIAN(x)     ((x) & SDL_AUDIO_MASK_BIG_ENDIAN)
#define SDL_AUDIO_ISLITTLEENDIAN(x)  (!SDL_AUDIO_ISBIGENDIAN(x))
#define SDL_AUDIO_ISSIGNED(x)        ((x) & SDL_AUDIO_MASK_SIGNED)
#define SDL_AUDIO_ISINT(x)           (!SDL_AUDIO_ISFLOAT(x))
#define SDL_AUDIO_ISUNSIGNED(x)      (!SDL_AUDIO_ISSIGNED(x))
typedef Uint32 SDL_AudioDeviceID;
#define SDL_AUDIO_DEVICE_DEFAULT_PLAYBACK ((SDL_AudioDeviceID) 0xFFFFFFFFu)
#define SDL_AUDIO_DEVICE_DEFAULT_RECORDING ((SDL_AudioDeviceID) 0xFFFFFFFEu)
typedef struct SDL_AudioSpec
{
    SDL_AudioFormat format;     
    int channels;               
    int freq;                   
} SDL_AudioSpec;
#define SDL_AUDIO_FRAMESIZE(x) (SDL_AUDIO_BYTESIZE((x).format) * (x).channels)
typedef struct SDL_AudioStream SDL_AudioStream;
extern  int  SDL_GetNumAudioDrivers(void);
extern  const char *  SDL_GetAudioDriver(int index);
extern  const char *  SDL_GetCurrentAudioDriver(void);
extern  SDL_AudioDeviceID *  SDL_GetAudioPlaybackDevices(int *count);
extern  SDL_AudioDeviceID *  SDL_GetAudioRecordingDevices(int *count);
extern  const char *  SDL_GetAudioDeviceName(SDL_AudioDeviceID devid);
extern  bool  SDL_GetAudioDeviceFormat(SDL_AudioDeviceID devid, SDL_AudioSpec *spec, int *sample_frames);
extern  int *  SDL_GetAudioDeviceChannelMap(SDL_AudioDeviceID devid, int *count);
extern  SDL_AudioDeviceID  SDL_OpenAudioDevice(SDL_AudioDeviceID devid, const SDL_AudioSpec *spec);
extern  bool  SDL_IsAudioDevicePhysical(SDL_AudioDeviceID devid);
extern  bool  SDL_IsAudioDevicePlayback(SDL_AudioDeviceID devid);
extern  bool  SDL_PauseAudioDevice(SDL_AudioDeviceID dev);
extern  bool  SDL_ResumeAudioDevice(SDL_AudioDeviceID dev);
extern  bool  SDL_AudioDevicePaused(SDL_AudioDeviceID dev);
extern  float  SDL_GetAudioDeviceGain(SDL_AudioDeviceID devid);
extern  bool  SDL_SetAudioDeviceGain(SDL_AudioDeviceID devid, float gain);
extern  void  SDL_CloseAudioDevice(SDL_AudioDeviceID devid);
extern  bool  SDL_BindAudioStreams(SDL_AudioDeviceID devid, SDL_AudioStream * const *streams, int num_streams);
extern  bool  SDL_BindAudioStream(SDL_AudioDeviceID devid, SDL_AudioStream *stream);
extern  void  SDL_UnbindAudioStreams(SDL_AudioStream * const *streams, int num_streams);
extern  void  SDL_UnbindAudioStream(SDL_AudioStream *stream);
extern  SDL_AudioDeviceID  SDL_GetAudioStreamDevice(SDL_AudioStream *stream);
extern  SDL_AudioStream *  SDL_CreateAudioStream(const SDL_AudioSpec *src_spec, const SDL_AudioSpec *dst_spec);
extern  SDL_PropertiesID  SDL_GetAudioStreamProperties(SDL_AudioStream *stream);
extern  bool  SDL_GetAudioStreamFormat(SDL_AudioStream *stream, SDL_AudioSpec *src_spec, SDL_AudioSpec *dst_spec);
extern  bool  SDL_SetAudioStreamFormat(SDL_AudioStream *stream, const SDL_AudioSpec *src_spec, const SDL_AudioSpec *dst_spec);
extern  float  SDL_GetAudioStreamFrequencyRatio(SDL_AudioStream *stream);
extern  bool  SDL_SetAudioStreamFrequencyRatio(SDL_AudioStream *stream, float ratio);
extern  float  SDL_GetAudioStreamGain(SDL_AudioStream *stream);
extern  bool  SDL_SetAudioStreamGain(SDL_AudioStream *stream, float gain);
extern  int *  SDL_GetAudioStreamInputChannelMap(SDL_AudioStream *stream, int *count);
extern  int *  SDL_GetAudioStreamOutputChannelMap(SDL_AudioStream *stream, int *count);
extern  bool  SDL_SetAudioStreamInputChannelMap(SDL_AudioStream *stream, const int *chmap, int count);
extern  bool  SDL_SetAudioStreamOutputChannelMap(SDL_AudioStream *stream, const int *chmap, int count);
extern  bool  SDL_PutAudioStreamData(SDL_AudioStream *stream, const void *buf, int len);
extern  int  SDL_GetAudioStreamData(SDL_AudioStream *stream, void *buf, int len);
extern  int  SDL_GetAudioStreamAvailable(SDL_AudioStream *stream);
extern  int  SDL_GetAudioStreamQueued(SDL_AudioStream *stream);
extern  bool  SDL_FlushAudioStream(SDL_AudioStream *stream);
extern  bool  SDL_ClearAudioStream(SDL_AudioStream *stream);
extern  bool  SDL_PauseAudioStreamDevice(SDL_AudioStream *stream);
extern  bool  SDL_ResumeAudioStreamDevice(SDL_AudioStream *stream);
extern  bool  SDL_LockAudioStream(SDL_AudioStream *stream);
extern  bool  SDL_UnlockAudioStream(SDL_AudioStream *stream);
typedef void ( *SDL_AudioStreamCallback)(void *userdata, SDL_AudioStream *stream, int additional_amount, int total_amount);
extern  bool  SDL_SetAudioStreamGetCallback(SDL_AudioStream *stream, SDL_AudioStreamCallback callback, void *userdata);
extern  bool  SDL_SetAudioStreamPutCallback(SDL_AudioStream *stream, SDL_AudioStreamCallback callback, void *userdata);
extern  void  SDL_DestroyAudioStream(SDL_AudioStream *stream);
extern  SDL_AudioStream *  SDL_OpenAudioDeviceStream(SDL_AudioDeviceID devid, const SDL_AudioSpec *spec, SDL_AudioStreamCallback callback, void *userdata);
typedef void ( *SDL_AudioPostmixCallback)(void *userdata, const SDL_AudioSpec *spec, float *buffer, int buflen);
extern  bool  SDL_SetAudioPostmixCallback(SDL_AudioDeviceID devid, SDL_AudioPostmixCallback callback, void *userdata);
extern  bool  SDL_LoadWAV_IO(SDL_IOStream *src, bool closeio, SDL_AudioSpec *spec, Uint8 **audio_buf, Uint32 *audio_len);
extern  bool  SDL_LoadWAV(const char *path, SDL_AudioSpec *spec, Uint8 **audio_buf, Uint32 *audio_len);
extern  bool  SDL_MixAudio(Uint8 *dst, const Uint8 *src, SDL_AudioFormat format, Uint32 len, float volume);
extern  bool  SDL_ConvertAudioSamples(const SDL_AudioSpec *src_spec, const Uint8 *src_data, int src_len, const SDL_AudioSpec *dst_spec, Uint8 **dst_data, int *dst_len);
extern  const char *  SDL_GetAudioFormatName(SDL_AudioFormat format);
extern  int  SDL_GetSilenceValueForFormat(SDL_AudioFormat format);